--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "start" : "nodemon index.js",
-  "dev" : "node index.js",
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "nodemon index.js",
+    "dev" : "node index.js"
   },
   "keywords": [],
   "author": "",
